--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-terraform.tfstate
-terraform.tfstate.backup
-.terraform
-.terraform.lock.hcl
-new_user_credentials.csv
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/.terraform
+terraform/.terraform.lock.hcl
+terraform/new_user_credentials.csv
